# PolyMMCP

./: .gitignore  CMakeLists.txt  README.md
include/: gamma_utils.hpp
source/: gamma_utils.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
